[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
hyper = {version = "1.6.0", features = ["client"]}
reqwest = "0.12.12"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = "1.43.0"
toml = "0.8.20"
tower = "0.5.2"
